--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,8 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: rgb(11, 19, 32);
 }
 
 #root {
   height: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
 }
