--- a/src/css/kkList.css
+++ b/src/css/kkList.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  left: -222px;
-  width: 200px;
-  height: 96vh;
-  background: white;
-  border: 1px solid lightgray;
-  padding: 10px;
+  left: -272px;
+  width: 250px;
+  height: 100%;
+  background: rgb(11, 19, 32);
+  border-right: 1px solid rgb(88, 198, 197);
   transition: left 1s;
   overflow: auto;
+  color: rgb(230, 230, 230);
 }
 
 .kk-list-container.visible {
@@ -19,8 +19,6 @@
 .kk-list {
   display: flex;
   flex-direction: column;
-  padding-top: 10px;
-  border-top: 1px solid lightgray;
 }
 
 .kk-list-header {
@@ -29,7 +27,7 @@
   align-items: center;
   flex-shrink: 0;
   font-size: 25px;
-  margin-bottom: 10px;
+  padding: 10px;
 }
 
 @media only screen and (min-width: 768px) {
