--- a/src/css/kks.css
+++ b/src/css/kks.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-grow: 1;
   position: relative;
+  height: 100vh;
 }
 
 .kk-button-container {
@@ -11,10 +12,9 @@
   display: flex;
   padding: 15px 25px;
   font-size: 24px;
-  border: none;
+  border: 1px solid lightgray;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
-  background: #4caf50;
+  background: white;
   cursor: pointer;
   outline: none;
 }
@@ -25,14 +25,19 @@
 
 .kk-button:active {
   background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
 }
 
 .expand-menu {
   font-size: 25px;
-  background: none;
   border: none;
+  padding: 5px;
+  background: transparent;
+  color: rgb(230, 230, 230);
+}
+
+.expand-menu:hover {
+  background: rgb(88, 198, 197);
+  color: rgb(230, 230, 230);
 }
 
 @media only screen and (min-width: 768px) {
