--- a/src/css/kks.css
+++ b/src/css/kks.css
@@ -6,31 +6,32 @@
 }
 
 .kk-button-container {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .kk-button {
   display: flex;
   padding: 15px 25px;
   font-size: 24px;
-  border: 1px solid lightgray;
-  border-radius: 15px;
-  background: white;
+  border: 1px solid rgb(88, 198, 197);
+  border-radius: 30px;
+  background: rgb(11, 19, 32);
+  color: rgb(230, 230, 230);
   cursor: pointer;
   outline: none;
 }
 
 .kk-button:hover {
-  background-color: #3e8e41;
-}
-
-.kk-button:active {
-  background-color: #3e8e41;
+  background-color: rgb(88, 198, 197);
 }
 
 .expand-menu {
   font-size: 25px;
   border: none;
-  padding: 5px;
+  padding: 10px;
   background: transparent;
   color: rgb(230, 230, 230);
 }
