--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -5,14 +5,32 @@
     width: 100vw;
     height: 100vh;
     background: rgba(218, 218, 218, 0.8);
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    opacity: 0;
+    z-index: -1;
+    transition: all 0.3s ease-out;
 }
 
 .overlay.visible {
-    display: initial;
+    opacity: 1;
     z-index: 1;
 }
 
-.overlay-body {
+img {
+    max-width: 80vw;
+    width: 100%;
+    height: auto;
+}
 
+.sign {
+    max-width: 600px;
+}
+
+.sign-name {
+    position: absolute;
+    bottom: 100px;
+    font-size: 70px;
 }
