--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -4,14 +4,16 @@
     top: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(218, 218, 218, 0.8);
+    background: url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     opacity: 0;
     z-index: -1;
-    transition: all 0.3s ease-out;
+    transition: all 1s ease-out;
 }
 
 .overlay.visible {
@@ -19,18 +21,25 @@
     z-index: 1;
 }
 
-img {
-    max-width: 80vw;
-    width: 100%;
-    height: auto;
+.overlay-body {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner {
+    position: absolute;
+    top: 0;
+    max-width: 100vw;
 }
 
 .sign {
-    max-width: 600px;
+    max-width: 100vw;
 }
 
 .sign-name {
     position: absolute;
-    bottom: 100px;
-    font-size: 70px;
+    bottom: 45px;
+    font-size: 45px;
 }
