--- a/src/css/kks.css
+++ b/src/css/kks.css
@@ -1,3 +1,13 @@
+.login-message {
+  display: flex;
+  flex-wrap: wrap;
+  height: 50vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+}
+
 .kk-container {
   display: flex;
   flex-grow: 1;
