--- a/src/css/wishlist.css
+++ b/src/css/wishlist.css
@@ -27,6 +27,7 @@
     border: 2px solid rgb(88, 198, 197);
     background: black;
     padding: 10px 30px;
+    color: white;
 }
 
 .wishlist-overlay-body li:not(:last-child) {
