--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,15 +1,50 @@
+html {
+    height: 100%;
+    color: #575757;
+    font-size: 14px;
+    font-family: Roboto !important;
+    background-image: linear-gradient(
+        to right top,
+        #051937,
+        #004d7a,
+        #008793,
+        #00bf72,
+        #a8eb12
+    );
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: rgb(11, 19, 32);
+    margin: 0;
+    padding: 0;
+}
+
+input,
+button {
+    height: 31px;
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+    border-radius: 4px;
+    border: 1px solid lightgray;
+    outline: none;
+    padding: 5px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    background: white;
 }
 
 #root {
-  height: 100%;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;  /* remove scrollbar space */
-  background: transparent;  /* optional: just make scrollbar invisible */
+    width: 0px; /* remove scrollbar space */
+    background: transparent; /* optional: just make scrollbar invisible */
 }
