--- a/src/css/signIn.css
+++ b/src/css/signIn.css
@@ -3,16 +3,62 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
-    color: white;
+    height: 75vh;
+}
+
+.signin-box {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    padding: 2rem 3rem;
+    background: white;
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .signin-container input {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
 }
 
-.signin-container input,
 .signin-container button {
-    height: 31px;
-    font-size: 16px;
+    height: 43px;
+}
+
+.login-button {
+    background: #4285f4;
+    color: white;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+
+.input-label {
+    font-weight: bold;
+    font-size: 0.75rem;
+    margin: 0.5rem 0;
+}
+
+.signup-link {
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.signup-link {
+    align-self: center;
+    font-size: 0.75rem;
+}
+
+.forgot-password {
+    align-self: flex-end;
+    font-size: 0.75rem;
+}
+
+.password-reset-success {
+    color: green;
+}
+
+.error {
+    color: red;
 }
