--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,7 +19,8 @@ body {
 }
 
 input,
-button {
+button,
+select {
     height: 31px;
     color: inherit;
     font-size: inherit;
@@ -33,6 +34,10 @@ button {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+a:hover {
+    color: #4285f4;
 }
 
 button {
