--- a/src/css/kks.css
+++ b/src/css/kks.css
@@ -34,7 +34,7 @@
 }
 
 .kk-button {
-    display: flex;
+    height: auto;
     padding: 15px 25px;
     font-size: 24px;
     border: 1px solid rgb(88, 198, 197);
