--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -11,14 +11,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 0;
-    z-index: -1;
-    transition: all 1s ease-out;
-}
-
-.overlay.visible {
     opacity: 1;
     z-index: 1;
+    transition: all 0.2s linear;
+}
+
+.overlay--hidden {
+    opacity: 0;
+    z-index: -1;
 }
 
 .overlay-body {
