--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,4 @@
 html {
-    height: 100%;
     color: #575757;
     font-size: 14px;
     font-family: Roboto !important;
@@ -16,6 +15,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 
 a {
