--- a/src/css/kks.css
+++ b/src/css/kks.css
@@ -67,6 +67,7 @@
 .kk-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .kk-list-header {
@@ -82,7 +83,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    margin: 10px;
+    margin: 0.75rem;
     border: 1px solid rgb(88, 198, 197);
     border-radius: 10px;
 }
@@ -92,7 +93,6 @@
     height: 75px;
     padding: 2px;
     border-radius: 50%;
-    margin-right: 2rem;
 }
 
 .kk-card__info {
@@ -202,13 +202,11 @@
     cursor: pointer;
 }
 
-@media only screen and (min-width: 768px) {
-    .kk-list-container {
-        position: initial;
+@media (min-width: 768px) {
+    .kk-list {
+        justify-content: normal;
     }
-
-    .kk-list,
-    .kk-list-header {
-        margin-top: 10px;
+    .kk-card__picture {
+        margin-right: 1.5rem;
     }
 }
