--- a/src/css/signIn.css
+++ b/src/css/signIn.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 75vh;
+    height: 75%;
 }
 
 .signin-container input,
@@ -22,7 +22,8 @@
 .signin-box {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 75%;
+    max-width: 400px;
     padding: 2rem 3rem;
     background: white;
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
