--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,3 +1,5 @@
+@link: #237ebc;
+
 html {
     color: #575757;
     font-size: 14px;
@@ -19,12 +21,13 @@ body {
 }
 
 a {
-    color: inherit;
+    color: @link;
     text-decoration: none;
-}
 
-a:hover {
-    color: #4285f4;
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
 
 button {
