--- a/src/less/signIn.less
+++ b/src/less/signIn.less
@@ -1,22 +1,44 @@
+input,
+button,
+select {
+    font-size: inherit;
+    font-family: inherit;
+}
+
+input {
+    height: 31px;
+}
+
 .signin-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 75%;
-}
 
-.signin-container input,
-.signin-container button,
-.signin-container select {
-    height: 31px;
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
-    border-radius: 4px;
-    border: 1px solid lightgray;
-    outline: none;
-    padding: 5px;
+    input,
+    button,
+    select {
+        border-radius: 4px;
+        border: 1px solid lightgray;
+        outline: none;
+        padding: 5px;
+    }
+
+    input {
+        margin-bottom: 1rem;
+        padding-left: 1rem;
+    }
+
+    select {
+        margin-bottom: 1rem;
+        padding-left: 0.7rem;
+    }
+
+    button,
+    .signin-container select {
+        height: 43px;
+    }
 }
 
 .signin-box {
@@ -29,21 +51,6 @@
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
         0px 8px 10px 1px rgba(0, 0, 0, 0.14),
         0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.signin-container input {
-    margin-bottom: 1rem;
-    padding-left: 1rem;
-}
-
-.signin-container select {
-    margin-bottom: 1rem;
-    padding-left: 0.7rem;
-}
-
-.signin-container button,
-.signin-container select {
-    height: 43px;
 }
 
 .login-button {
