--- a/src/less/index.less
+++ b/src/less/index.less
@@ -33,6 +33,11 @@ a {
 button {
     border: none;
     background: white;
+    cursor: pointer;
+
+    &:disabled {
+        cursor: not-allowed;
+    }
 }
 
 #root {
