--- a/src/less/kks.less
+++ b/src/less/kks.less
@@ -5,7 +5,6 @@
     padding: 0.75em 1em;
     border: 1px solid rgb(88, 198, 197);
     border-radius: 2em;
-    cursor: pointer;
     outline: none;
 
     &:hover {
@@ -13,15 +12,8 @@
         border-color: rgb(11, 19, 32);
         color: rgb(11, 19, 32);
     }
-}
 
-.button-disabled {
-    background-color: inherit;
-    color: inherit;
-    border-color: inherit;
-    cursor: not-allowed;
-
-    &:hover {
+    &:disabled {
         background-color: inherit;
         color: inherit;
         border-color: inherit;
@@ -152,9 +144,6 @@
         bottom: 45px;
         font-size: 45px;
     }
-}
-
-.manage-wishlist {
 }
 
 .wishlist-overlay {
