--- a/src/less/kks.less
+++ b/src/less/kks.less
@@ -138,13 +138,11 @@
         margin-bottom: 5rem;
     }
 
-    &__sign {
-    }
-
     &__sign-name {
         position: absolute;
         bottom: 45px;
         font-size: 45px;
+        font-weight: bold;
     }
 }
 
