--- a/src/less/manageWishlist.less
+++ b/src/less/manageWishlist.less
@@ -34,6 +34,10 @@
         flex-grow: 1;
     }
 
+    &__input + &__input {
+        margin-top: 1rem;
+    }
+
     &__button {
         align-self: flex-end;
 
@@ -68,14 +72,14 @@
         }
 
         &--up:hover {
-            color: #237ebc;
-            border-color: #237ebc;
+            color: #4285f4;
+            border-color: #4285f4;
             opacity: 1;
         }
 
         &--down:hover {
-            color: #237ebc;
-            border-color: #237ebc;
+            color: #4285f4;
+            border-color: #4285f4;
             opacity: 1;
         }
 
@@ -108,6 +112,7 @@
         }
 
         &__input + &__input {
+            margin-top: 0;
             margin-left: 2rem;
         }
     }
