--- a/src/less/signIn.less
+++ b/src/less/signIn.less
@@ -9,6 +9,10 @@ input {
     height: 31px;
 }
 
+select {
+    height: 43px;
+}
+
 .signin-container {
     display: flex;
     flex-direction: column;
@@ -20,7 +24,7 @@ input {
     button,
     select {
         border-radius: 4px;
-        border: 1px solid lightgray;
+        border: 1px solid #f2f2f2;
         outline: none;
         padding: 5px;
     }
@@ -55,9 +59,15 @@ input {
 
 .login-button {
     background: #4285f4;
-    color: white;
+    color: #f2f2f2;
     cursor: pointer;
     margin-top: 2rem;
+
+    &:disabled {
+        background-color: inherit;
+        color: inherit;
+        border-color: inherit;
+    }
 }
 
 .input-label {
