--- a/src/less/manageWishlist.less
+++ b/src/less/manageWishlist.less
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -10,8 +10,10 @@
 .manage-wishlist {
     display: flex;
     flex-direction: column;
+    max-height: 75vh;
     padding: 2rem 3rem;
-    margin: 6rem 2rem;
+    margin: 6rem 2rem 0;
+    overflow: auto;
     background: white;
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
         0px 8px 10px 1px rgba(0, 0, 0, 0.14),
