--- a/public/css/kks.css
+++ b/public/css/kks.css
@@ -75,7 +75,7 @@ button:disabled {
   flex-grow: 1;
   justify-content: center;
   align-items: center;
-  min-height: 50vh;
+  min-height: 536px;
 }
 .kk-container .kk-button {
   font-size: 24px;
@@ -84,17 +84,15 @@ button:disabled {
   background-color: #58c6c5;
 }
 .kk-container .kk-list-container {
-  min-height: 0;
   background: #121f35;
   border-top: 1px solid #3c8d8c;
   color: #f2f2f2;
   padding-bottom: 1rem;
-  overflow: auto;
 }
 .kk-container .kk-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 .kk-container .kk-list-header {
   display: flex;
@@ -135,10 +133,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url(../images/background.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: center;
+  justify-content: center;
   opacity: 1;
   z-index: 1;
   transition: opacity 0.2s ease;
@@ -147,6 +142,24 @@ button:disabled {
   opacity: 0;
   z-index: -1;
 }
+.overlay__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+.overlay__background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url(../images/background.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  z-index: 1;
+}
 .overlay__body {
   position: relative;
   display: flex;
@@ -154,8 +167,8 @@ button:disabled {
   align-items: center;
 }
 .overlay__banner {
-  max-width: 100%;
-  margin-bottom: 2rem;
+  max-width: calc(100% - 4rem);
+  margin: 1rem auto;
 }
 .overlay__sign-name {
   position: absolute;
@@ -168,7 +181,7 @@ button:disabled {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100vw;
@@ -193,9 +206,6 @@ button:disabled {
   margin-top: 1rem;
 }
 @media (min-width: 768px) {
-  .kk-container .kk-list {
-    justify-content: normal;
-  }
   .kk-container .kk-card__picture {
     margin-right: 1.5rem;
   }
