--- a/src/less/kks.less
+++ b/src/less/kks.less
@@ -54,6 +54,9 @@
     }
 
     .kk-list-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         background: rgb(18, 31, 53);
         border-top: 1px solid rgb(60, 141, 140);
         color: #f2f2f2;
@@ -64,12 +67,10 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        max-width: 880px;
     }
 
     .kk-list-header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         font-size: 25px;
         padding: 10px;
     }
