--- a/src/less/kks.less
+++ b/src/less/kks.less
@@ -4,7 +4,7 @@
     color: #f2f2f2;
     padding: 0.75em 1em;
     border: 1px solid rgb(88, 198, 197);
-    border-radius: 2em;
+    border-radius: 5px;
     outline: none;
 
     &:hover {
@@ -77,30 +77,23 @@
 
     .kk-card {
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
+        gap: 0.5rem;
         padding: 10px;
         margin: 0.75rem;
-        border: 1px solid rgb(88, 198, 197);
-        border-radius: 10px;
+        width: 140px;
 
         &__picture {
-            width: 70px;
+            width: auto;
             height: 70px;
             padding: 2px;
-            border-radius: 50%;
-        }
-
-        &__info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            height: 100%;
+            border-radius: 15px;
         }
 
         &__name {
-            font-size: 1.15rem;
+            font-size: 1.25rem;
         }
     }
 }
@@ -193,13 +186,5 @@
     &__close {
         align-self: center;
         margin-top: 1rem;
-    }
-}
-
-@media (min-width: 768px) {
-    .kk-container {
-        .kk-card__picture {
-            margin-right: 1.5rem;
-        }
     }
 }
